Trying to fix PermGen space error in Travis